kubernetes/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
  labels:
    app: romm
spec:
  selector:
    app: romm
  ports:
  - name: http
    port: 80
    targetPort: http
  type: ClusterIP
