kubernetes/romm/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
  annotations:
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`romm.tehmatt.com`)
    kind: Rule
    services:
    - name: romm
      port: 80
      passHostHeader: false
    middlewares:
    - name: default-headers
      namespace: romm
  tls: {}
